syntax = "proto3";

package pb;

import "session.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/machearn/galaxy_service/pb";

message CreateSessionRequest {
  int32 user_id = 1;
  string client_ip = 2;
  string user_agent = 3;
}

message CreateSessionResponse {
  string access_token = 1;
  google.protobuf.Timestamp expired_at = 2;
  Session session = 3;
}